# SyncThingy

./: .gitignore  CMakeLists.txt  README.md
linux_packaging/: SyncThingy.desktop  com.github.zocker160.SyncThingy.metainfo.xml  metainfo.xml  syncthingy.service
src/: Constants.h  ServiceDialog.cpp  ServiceDialog.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
